fix: removed scrollbar gutter

--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -34,7 +34,7 @@
   padding: 16px 0 0 0;
   overflow-y: auto;
   height: 100%;
-  scrollbar-gutter: stable;
+  // scrollbar-gutter: stable;
 
   @media (max-width: $mobile) {
     padding: 16px 0 0 0;
